# model-hub

./: .gitignore  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  PRIVACY.md  README.md  SECURITY.md  build.spec  cli.py  installer.iss  launcher.bat  pyproject.toml  server.py
.github/: dependabot.yml  pull_request_template.md
backend/: api.py  cloud_session.py  cloud_tokens.py  config.py  desktop.py  plugins.py  pro_install.py  project_paths.py  self_invoke.py  version.py
docs/: PLUGINS.md
frontend/: index.html  script.js  style.css
scripts/: enterprise_launch_gate.py  installed_app_audit.py  public_readiness_gate.py  render_pro_gate_config.py  sign_enterprise_evidence.py  unified_product_audit.py
site/: index.html
tests/: test_agent.py  test_agent_launcher.py  test_agent_sandbox.py  test_agent_variant.py  test_api.py  test_api_agent_chat.py  test_api_cloud.py  test_api_library_cache.py  test_api_plugins.py  test_benchmark.py  test_boundary_no_lac_pro_import.py  test_build_spec_backend_paths.py  test_builtin_tools_useragent.py  test_calibration.py  test_chat_warm.py  test_ci_workflow_contract.py  test_cli_dispatch.py  test_cli_plugins.py  test_cloud_contract_vectors.py  test_cloud_session.py  test_cloud_tokens.py  test_desktop.py  test_desktop_fallback.py  test_enterprise_launch_gate.py  test_export.py  test_fs_sandbox.py  test_installer_no_ollama_check.py  test_kill_safety.py  test_ollama_tools.py  test_permission.py  test_persistence.py  test_plugins.py  test_pro_activate.py  test_pro_gate_deploy_workflow.py  test_pro_install.py  (+16 more)
(+125 files in other folders)
